--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@tarojs/taro-swan": "1.2.4",
     "@tarojs/taro-tt": "1.2.4",
     "@tarojs/taro-weapp": "1.2.4",
+    "lodash": "^4.17.11",
     "lodash.get": "^4.4.2",
     "mobx": "4.8.0",
     "nerv-devtools": "^1.3.9",
