🎉 finish center page

--- a/project.config.json
+++ b/project.config.json
@@ -1,6 +1,6 @@
 {
   "miniprogramRoot": "./dist",
-  "projectname": "splash",
+  "projectname": "漫图",
   "description": "",
   "appid": "wxb13c8c968747aece",
   "setting": {
